@@ -6,6 +6,7 @@ add a limit of 60fps to prevent good devices from having fast animations (or add
 remember to add numberOfObjectsDrawn to all the drawing functions
 
 ALPHA 0.0.3 - April 18, 2025
+- Added player healing (6 sec delay, 8 sec full healing)
 - Changed the debug to mimic rocketer
 - Added a minimap
 - Bullets can now pass through objects (added penetration)
